--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.33",
     "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
+    "random-words": "^2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flip-move": "^3.0.5",
